# echtzeitsysteme

./: .gitignore  CMakeLists.txt  README.md  package.xml  tmptest.txt
cfg/: ImageProcessing.cfg  Steering.csv  Velocity.csv  WebcamSettings.cfg  controller.cfg  steer.csv  steering.m
cfg/color_filter/: color1.yaml  green1
cfg/presets/: lane_detection_01.yaml  lane_detection_02.yaml  lane_detection_03.yaml  lane_detection_default.yaml  trajectory_planning_03  webcam_publisher_01.yaml  webcam_publisher_default.yaml
echtzeitsysteme/: CMakeLists.txt  package.xml
images/: WebcamInput.ppm  my_photo-2.txt  signs.ppm  track_calibration_1.txt
images/DBSignCompare/: Homography1to3p.xml  einfahrtverboten
images/testSchilder/: ErgebnisNeuronalesNetzwerkKonsole.txt  schilder_test.csv
include/: image_preprocessor.h  safety.h
include/constants/: constants.h
include/gui/: color_selector.hpp
include/lane_detection/: CameraCalibration.hpp  CameraReader.cpp  CameraReader.hpp  ContourFindingLaneDetector.h  LaneDetector.h  NonTransformingLaneDetector.h  TransformingLaneDetector.h  image_processor.cpp  image_processor.hpp  lane_detector.h  lane_points_calculator.hpp  time_profiling.hpp
include/lane_detection/images/: calibration_test_2.txt  track_calibration_1.txt
include/lane_detector/: controller.h  lane_detector.h  trajectory.h  y_interp.h
include/trajectory_planning/: controller.h  polynomialRegression.h  trajectory.h  vehModel.h
include/utils/: print_working_directory.h  time_profiling.hpp
launch/: echtzeitsysteme.launch  parameter.yaml  trajectory_planning.launch
proof_of_concept/src/: show_multiple_lane_points.cpp
scripts/: drawGridOnCamera.py
src/: SIFT.py  Trajectory.cpp  controller.cpp  image_preprocessor.cpp  lane_detection.cpp  lane_detector.cpp  lane_detector_node.cpp  safety.cpp  signNewConsept.py  trafficSign.cpp  trafficSignBlobDetector.py  trafficSignPython.py  trajectory.cpp  trajectory_planning.cpp
src/NeuronalNetwork/: netzwerk.py  train.py
src/NeuronalNetwork/FunktionierendesNetz/: ANLEITUNG_StarteErkennung.txt  cam_demo.py
src/NeuronalNetwork/FunktionierendesNetz/YOLOv3 DATASET/Schildertask4simpletrain_52_0.009297w/: config.json
src/NeuronalNetwork/FunktionierendesNetz/cfg/: yolov3.cfg
src/NeuronalNetwork/FunktionierendesNetz/data/: coco.names
src/NeuronalNetwork/Handschrift_mnist_dataset/: mnist_train_100.csv
src/NeuronalNetwork/TrafficSign/: CSVerstellenTest.py  CSVerstellenTrain.py  netzwerk.py
src/gui/: color_selector.cpp
src/input_reading/: image_publisher.cpp  webcam_publisher.cpp
src/lane_detection/: CameraCalibration.cpp  CameraReader.cpp  LaneDetector.cpp  TransformingLaneDetector.cpp  camera_reading_test_node.cpp  image_processor.cpp  lane_detection.cpp  lane_points_calculator.cpp
src/monitoring/: image_viewer.cpp
src/sign_detection/: sign_detector.cpp
src/trafficSign/: haarcascade_roundabout.xml  orb.py
src/trajectory_planner/: VehicleModel.cpp  controller.cpp  trajectory.cpp  trajectory_planning.cpp
test/: 20m_circle  5m_circle  CMakeLists.txt  README.md  camera_calibration_tests.cpp  curv_20m  curv_sin_x  firstTest.cpp  lane_points_calculator_tests.cpp  package.xml
test/include/trajectory_planning/: controller.h  trajectory.h  y_interp.h
test/src/: controller.cpp  lane_detection.cpp  trajectory.cpp  trajectory_planning.cpp
